(lang dune 3.18)

(name randomart)

(generate_opam_files false)

(source
 (github auribuo/randomart))

(authors "Aurelio Buonomo <auribuo@gmail.com>")

(maintainers "Aurelio Buonomo <auribuo@gmail.com>")

(license LICENSE)
(documentation https://github.com/auribuo/randomart)

(package
 (name randomart)
 (synopsis "Random art generation using grammars")
 (description "Random art using grammars inspired by github.com/tsoding/randomart")
 (depends ocaml)
)
